# light

./: .djlintrc  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  CLAUDE.md  CONTRACT_EXPIRATION_FEATURE.md  LICENSE  README.md  _typos.toml  biome.json  bunfig.toml  conftest.py  git.md  package.json  playwright.config.js  playwright.config.ts  py.typed  pyproject.toml  requirements.txt  research.md  ruff.toml  tsconfig.json
.agent/workflows/: local-dev.md
.github/workflows/: deploy.yml  lint.yml  update-plans.yml
.other/: BILINGUAL_EXTRACTION_FIX.md  CHANGELOG-2026-01-11.md  CLAUDE.md  CONTRACT_EXPIRATION_FEATURE.md  DEDUPLICATION_IMPROVEMENTS.md  DOCUMENTATION_UPDATES.md  RateGrinder-ver-9.20260107-09.xlsx  SIMPLIFICATION_SUMMARY.md  TDU Delivery Charges (12-29-2025).docx  TDU Delivery Charges per Month.csv  TDU Delivery Charges per kWh.csv  analyze_language_issue.js  generate_sample_data.py  plans_2026-01-09.csv  plans_2026-01-10.csv  power-to-choose-76107.csv  test_deduplication.js
.other/powertochoose.org/: power-to-choose-offers.csv
data/: local-taxes.json  plans.json  tdu-rates.json
data/csv-archive/: README.md  plans_2026-01-10.csv  plans_2026-01-11.csv  plans_2026-01-12.csv  plans_2026-01-13.csv  plans_2026-01-14.csv  plans_2026-01-15.csv  plans_2026-01-16.csv  plans_2026-01-17.csv  plans_2026-01-18.csv  plans_2026-01-21.csv  plans_2026-01-22.csv  plans_2026-01-23.csv  plans_2026-01-24.csv  plans_2026-01-25.csv  plans_2026-01-27.csv  plans_2026-01-28.csv  plans_2026-01-29.csv
data/historical/: plans_2026-01-10.json  plans_2026-01-11.json
data/json-archive/: .gitkeep  README.md  plans_2026-01-13.json  plans_2026-01-15.json  plans_2026-01-16.json  plans_2026-01-17.json  plans_2026-01-18.json  plans_2026-01-19.json  plans_2026-01-20.json  plans_2026-01-21.json  plans_2026-01-22.json  plans_2026-01-23.json  plans_2026-01-25.json  plans_2026-01-26.json  plans_2026-01-27.json  plans_2026-01-28.json
docs/: CHANGELOG-2026-01-11.md  api-response-schema.md  calculation-algorithm.md  contract-expiration.md  data-schema-plans.md  data_formats.md  deployment.md  design-philosophy.md  design-system-reference.md  etf-implementation-plan.md  local-dev.md  research.md  tdu-service-areas.md  technology-stack.md
scripts/: archive_to_csv.py  build-css.js  build-css.ts  fetch_plans.py  fetch_tdu_rates.py  generate_sample_data.py
scripts/models/: __init__.py
src/: about.html  index.html
src/css/: bundle.css  fonts.css  styles.css
src/js/: animations.js  api.js  calculator.js  ui.js
src/ts/: api.ts  calculator.ts  ui.ts
tests/: test_python_models.py
tests/ui/: calculator.spec.js  calculator.spec.ts
tests/unit/: cost-calculator.test.js  (+3 more)
(+31 files in other folders)
