[project]
name = "light"
version = "0.1.0"
description = "Texas Electricity Plan Finder - Free, unbiased electricity plan comparison tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "RUF"]
ignore = []

[tool.djlint]
profile = "html"
indent = 2
max_line_length = 120
format_attribute_template_tags = true
ignore = "H006,H030,H031"
# H006: img tag height/width (not always needed)
# H030: meta description (not applicable)
# H031: meta keywords (obsolete SEO)
